[package]
name = "oscilloscope"
version = "0.1.0"
authors = ["Roope Salmi <rpsalmi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuix = { git = "https://github.com/geom3trik/tuix.git", branch = "develop" }
femtovg = { git = "https://github.com/femtovg/femtovg", branch = "master", default-features = false }
cpal = "0.13"
triple_buffer = "5.0"
